修改生成tar.gz包的配置文件